--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.2.3
 Flask-Cors==3.0.10
 Pillow==8.4.0
 tensorflow==2.12.0
-cv2==4.7.0.72
+opencv-python==4.5.3.56
 numpy==1.23.5
 pandas==2.0.0
 scipy==1.10.1
