--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 C:/Users/Backup/Documents/GitHub/Dysign-webapp/backend/dysignIncModel.h5 filter=lfs diff=lfs merge=lfs -text
+C:/Users/Backup/Documents/GitHub/Dysign-webapp/backend/dysignIncModel.h5 filter=lfs diff=lfs merge=lfs -text
